fix: resolved issue with overflowing in sidebar

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -148,16 +148,6 @@
     height: 100%;
 }
 
-#table-wrapper::-webkit-scrollbar {
-    width: 5px;
-    background-color: transparent;
-}
-
-#table-wrapper::-webkit-scrollbar-thumb {
-    background: var(--accent-200);
-    border-radius: 20px;
-}
-
 #table-head{
     width: 100%;
     height: fit-content;
