--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,6 +57,16 @@ a{
   color: initial;
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--accent-200);
+  border-radius: 20px;
+}
+
 // Inter
 
 @font-face {
